# jaxadi

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  codegen.py  environment.yml  gen.py  pyproject.toml  test.py
.github/workflows/: build.yaml
benchmarks/: README.md  cuda_benchmark_results.npz  jaxadi_benchmark_results.npz  jaxadi_vs_cusadi.ipynb  run_benchmark.py  visualize.ipynb
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
examples/: 00_translate.py  01_lower.py  02_convert.py  03_mjx.py  03_pendulum_rollout.py  03_pinocchio.py  04_mjx.py  04_pinocchio.py  04_translate_comp.py  _demo.ipynb  _pinocchio_old.py  codegen.py  gen.py  optimize-ast.py  print_ast.py  stages.py  test.py  test_eval.py
jaxadi/: __init__.py  _compile.py  _convert.py  _declare.py  _expand.py  _graph.py  _legacy_translate.py  _ops.py  _preprocess.py  _stages.py  _transcribe.py  _translate.py
test/: new_test.py  test.py
tests/: test_casadi_equality.py  test_examples.py  test_input.py
