[project]
name = "jaxadi"
description = "**JaxADi** is a powerful Python library designed to bridge the gap between `casadi.Function` and JAX-compatible functions."
version = "0.4.0"
authors = [
    { name = "Lev Kozlov", email = "l.kozlov@kaist.ac.kr" },
    { name = "Igor Alentev", email = "ialentev@kaist.ac.kr" },
]
dependencies = ["casadi", "jax"]
readme = "README.md"
requires-python = ">=3.10"

optional-dependencies = { "dev" = ["pre-commit", "pytest"] }

[project.urls]
homepage = "https://github.com/based-robotics/jaxadi"
repository = "https://github.com/based-robotics/jaxadi.git"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jaxadi*"]


[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
